src/test/ui/issues/issue-29147.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-29147.rs:21:13
   |
LL |     let _ = <S5<_>>::xxx;
   |             ^^^^^^^^^^^^ cannot call trait method as a free function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
